--- a/AWS-SAA_Notes.html
+++ b/AWS-SAA_Notes.html
@@ -100,7 +100,38 @@
     5. Hardware Key Fob MFA Device for AWS GovCloud, if you are in the USG, provided by SurePassID<br>
 </p>
 
+<h2>Ways to access AWS</h2>
+<p>
+    There are three options for accessing AWS.<br>
+    1. AWS management console with username, password, and MFA.<br>
+    2. AWS command line interface (CLI): protected by access keys.</a><br>
+    3. Aws Software Developer Kit (SDK) - for code: protected by access keys.<br>
+    Access keys are generated in the console.<br>
+    Users manage their own keys.<br>
+    Access keys are secret, just like passwords that should not be shared.<br>
+    Access Key ID == username<br>
+    Secret Access Key == password<br>
+</p>
 
+<h2>CLI</h2>
+<p>
+    A tool the enables you to interact with AWS service using commands in a command-line shell.<br>
+    Direct access to the public API's of AWS services.<br>
+    You can develop scripts to manage your services.</a><br>
+    It's open source: <a href="https://github.com/aws/aws-cli">AWS CLI GitHub</a><br>
+    Alternative to using AWS Managment Console<br>
+</p>
+
+<h2>SDK</h2>
+<p>
+    Language Specific API's<br>
+    Enables you to access and manage AWS services programmatically<br>
+    Embedded within your application</a><br>
+    Supports:</a><br>
+    -SKD's (JS, Python, PHP, .NET, Ruby, Java, GO, Node.js, C++)<br>
+    -Mobile SDK's (Android, iOS, ..)<br>
+    -IoT Device SDK's (Embedded C, Ardunio,..)<br>
+</p>
 
 </body>
 </html>
