--- a/AWS-SAA_Notes.html
+++ b/AWS-SAA_Notes.html
@@ -131,7 +131,18 @@
     -SKD's (JS, Python, PHP, .NET, Ruby, Java, GO, Node.js, C++)<br>
     -Mobile SDK's (Android, iOS, ..)<br>
     -IoT Device SDK's (Embedded C, Ardunio,..)<br>
+    Example: AWS CLI is built on ASW SDK for Python.<br>
 </p>
+
+<h2>Cloudshell</h2>
+<p>
+    It is not available in all regions.<br>
+    Available regions are here: <a href="https://docs.aws.amazon.com/cloudshell/latest/userguide/supported-aws-regions.html">AWS Cloudshell Region Availability</a><br>
+    Alternative from using CMD,Terminal to manage AWS.<br>
+
+</p>
+
+
 
 </body>
 </html>
