--- a/AWS-SAA_Notes.html
+++ b/AWS-SAA_Notes.html
@@ -460,6 +460,20 @@
     Use cases:<br>
     HDFs, HBase, Cassandra, Kafka.<br>
 
+    <h2>Elastic Network Interface (ENI)</h2>
+    Logical component in a VPC that represents a virtual network card.<br>
+    The ENI can have the following attributes:<br>
+    -Primary private IPv4, one or more secondary IPv4.<br>
+    -One Elastic IP (IPv4) per private IPv4.<br>
+    -One public IPv4.<br>
+    -One or more security Groups<br>
+    -Mac Address.<br><br>
+
+    You can create ENI independently and attach them on the fly (move them) on EC2 instances for failover.<br>
+    Bound to a specific AZ.<br>
+    A link to additional information regarding ENI: <a href="https://aws.amazon.com/blogs/aws/new-elastic-network-interfaces-in-the-virtual-private-cloud/">AWS ENI</a>
+
+
 
 
 
